unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/zaapit__zaapit_editable_table2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>zaapit editable table2</description>
    <label>zaapit editable table2</label>
</CustomObject>