unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Advanced_Text_Search__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Advanced_Text_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Advanced Text Search</description>
    <label>Advanced Text Search</label>
    <type>Checkbox</type>
</CustomField>