unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Custom_CSS__c</fullName>
    <description>Custom CSS  to control view or edit mode fields columns etc.</description>
    <inlineHelpText>Custom CSS  to control view / edit mode fields columns etc.</inlineHelpText>
    <label>Custom CSS</label>
    <type>TextArea</type>
</CustomField>