unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__customLinksOnReadMode2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__customLinksOnReadMode2__c</fullName>
    <label>customLinksOnReadMode2</label>
    <type>TextArea</type>
</CustomField>