unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__customLinksOnReadMode__c.field-meta.xml
<CustomField>
    <fullName>zaapit__customLinksOnReadMode__c</fullName>
    <inlineHelpText>Format: salesforce_field~salesforce_field_ID#salesforce_field~salesforce_field_ID..
The "salesforce_field_ID" will be the link on the text of "salesforce_field"</inlineHelpText>
    <label>customLinksOnReadMode</label>
    <type>TextArea</type>
</CustomField>