unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__DupeSettings__c.field-meta.xml
<CustomField>
    <fullName>zaapit__DupeSettings__c</fullName>
    <label>DupeSettings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>