unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Enable_Sort_grouping__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Enable_Sort_grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Sort grouping</description>
    <label>Enable Sort Grouping</label>
    <type>Checkbox</type>
</CustomField>