unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__export_to_url__c.field-meta.xml
<CustomField>
    <fullName>zaapit__export_to_url__c</fullName>
    <label>export_to_url</label>
    <type>TextArea</type>
</CustomField>