unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__extraConditionFilter2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__extraConditionFilter2__c</fullName>
    <description>extends extraConditionFilter</description>
    <label>extraConditionFilter2</label>
    <type>TextArea</type>
</CustomField>