unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__extraConditionFilter__c.field-meta.xml
<CustomField>
    <fullName>zaapit__extraConditionFilter__c</fullName>
    <inlineHelpText>Write a SQL (SOQL) optional condition.
Example: price&gt;0</inlineHelpText>
    <label>extraConditionFilter</label>
    <type>TextArea</type>
</CustomField>