unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__fields__c.field-meta.xml
<CustomField>
    <fullName>zaapit__fields__c</fullName>
    <inlineHelpText>The field to display in the editable table, use '#' as a field separator, use the original field API name</inlineHelpText>
    <label>fields</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>