unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__fieldsHeaders__c.field-meta.xml
<CustomField>
    <fullName>zaapit__fieldsHeaders__c</fullName>
    <inlineHelpText>Specify your own first row headers - leave empty to use the default, a must: number of fields=number of field headers. format: salesforce_field~new header#salesforce_field~new header#....</inlineHelpText>
    <label>fieldsHeaders</label>
    <type>TextArea</type>
</CustomField>