unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__FilterReplaceLabelName__c.field-meta.xml
<CustomField>
    <fullName>zaapit__FilterReplaceLabelName__c</fullName>
    <label>FilterReplaceLabelName</label>
    <type>TextArea</type>
</CustomField>