unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__freezeColumnNum__c.field-meta.xml
<CustomField>
    <fullName>zaapit__freezeColumnNum__c</fullName>
    <defaultValue>1</defaultValue>
    <label>freezeColumnNum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>