unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__grid_edit_mode__c.field-meta.xml
<CustomField>
    <fullName>zaapit__grid_edit_mode__c</fullName>
    <defaultValue>0</defaultValue>
    <description>0 start in read mode 1 start in edit mode 2 always keep edit mode open
(if you choose 1 or 2 via api set isedit to true)</description>
    <label>grid_edit_mode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>