unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hide_chatter__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hide_chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hide_chatter</label>
    <type>Checkbox</type>
</CustomField>