unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Hide_Scroll_Buttons__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Hide_Scroll_Buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Scroll Buttons</description>
    <label>Hide Scroll Buttons</label>
    <type>Checkbox</type>
</CustomField>