unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideAddRow__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideAddRow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Add Row button on edit mode</description>
    <label>hideAddRow</label>
    <type>Checkbox</type>
</CustomField>