unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideCustomizeLink__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideCustomizeLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Customize Link</description>
    <label>hideCustomizeLink</label>
    <type>Checkbox</type>
</CustomField>