unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideItemsPerPage__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideItemsPerPage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hideItemsPerPage</label>
    <type>Checkbox</type>
</CustomField>