unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hidePageNumberConfirm__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hidePageNumberConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide page number confirm pop up when in related list mode</description>
    <inlineHelpText>Hide page number confirm pop up when in related list mode</inlineHelpText>
    <label>hidePageNumberConfirm</label>
    <type>Checkbox</type>
</CustomField>