unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__HierarchyRelation__c.field-meta.xml
<CustomField>
    <fullName>zaapit__HierarchyRelation__c</fullName>
    <description>Hierarchy Relation for {PID parameter 
Format: table tilda SON Field API FIELD NAME tilda Father Field API FIELD NAME
Example: account tilda  id tilda parentid</description>
    <inlineHelpText>Hierarchy Relation for {PID} parameter 
Format: table~SON Field API FIELD NAME~Father Field API FIELD NAME
Example: account~id~parentid</inlineHelpText>
    <label>HierarchyRelation</label>
    <type>TextArea</type>
</CustomField>