unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__include_page_load_params__c.field-meta.xml
<CustomField>
    <fullName>zaapit__include_page_load_params__c</fullName>
    <description>include page load prams separated by pound</description>
    <label>include page load params</label>
    <type>TextArea</type>
</CustomField>