unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__isEdit__c.field-meta.xml
<CustomField>
    <fullName>zaapit__isEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit - Default</label>
    <type>Checkbox</type>
</CustomField>