unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__MaximumRowsMassDeleteAll__c.field-meta.xml
<CustomField>
    <fullName>zaapit__MaximumRowsMassDeleteAll__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>Maximum Rows for Mass Delete All will delete the first x rows this option is used for limiting the number of rows so when deleting the wont exceed Salesforces limits.</description>
    <label>MaximumRowsMassDeleteAll</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>