unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__maxRowsOnPage__c.field-meta.xml
<CustomField>
    <fullName>zaapit__maxRowsOnPage__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Max rows on page  - footer selector</description>
    <label>maxRowsOnPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>