unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__maxRowToExport__c.field-meta.xml
<CustomField>
    <fullName>zaapit__maxRowToExport__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>The maximum amount of rows to export</description>
    <label>maxRowToExport</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>