unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__NumberOfNewRows__c.field-meta.xml
<CustomField>
    <fullName>zaapit__NumberOfNewRows__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The number of new empty rows to add on default</description>
    <label>NumberOfNewRows</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>