unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__PutFieldOnRowCSSClass__c.field-meta.xml
<CustomField>
    <fullName>zaapit__PutFieldOnRowCSSClass__c</fullName>
    <label>PutFieldOnRowCSSClass</label>
    <type>TextArea</type>
</CustomField>