unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Show_All_Rows_in_query__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Show_All_Rows_in_query__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show All Rows in query  includes archived and deleted rows (ALL ROWS)</description>
    <label>Show All Rows in query</label>
    <type>Checkbox</type>
</CustomField>