unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Show_column_filter__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Show_column_filter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show column filter</label>
    <type>Checkbox</type>
</CustomField>