unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Show_Hover_Preview_On_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Show_Hover_Preview_On_Name_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show hover preview on name field</description>
    <label>Show hover preview on name field</label>
    <type>Checkbox</type>
</CustomField>