unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Show_Mass_Updae_on_view_mode__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Show_Mass_Updae_on_view_mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show Mass Updae on view mode</description>
    <label>Show Mass Updae on view mode</label>
    <type>Checkbox</type>
</CustomField>