unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showExport__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showExport__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show Export button to Excel pdf word ans xml</description>
    <label>showExport</label>
    <type>Checkbox</type>
</CustomField>