unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showMassDuplicate__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showMassDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showMassDuplicate</label>
    <type>Checkbox</type>
</CustomField>