unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showQuarterField__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showQuarterField__c</fullName>
    <description>Show Quarter Field of type date to show only the current or selected quarter</description>
    <label>showQuarterField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>