unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__ShowRefreshLink__c.field-meta.xml
<CustomField>
    <fullName>zaapit__ShowRefreshLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Refresh Link</description>
    <label>ShowRefreshLink</label>
    <type>Checkbox</type>
</CustomField>