unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showTopTaskLinksSAM__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showTopTaskLinksSAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showTopTaskLinksSAM</label>
    <type>Checkbox</type>
</CustomField>