unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__soqlSubQueryPre__c.field-meta.xml
<CustomField>
    <fullName>zaapit__soqlSubQueryPre__c</fullName>
    <description>Example: select email from leads group by email having count()&gt;1</description>
    <label>soqlSubQueryPre</label>
    <type>TextArea</type>
</CustomField>