unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__sortDir2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__sortDir2__c</fullName>
    <label>sortDir2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>