unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__sortDir__c.field-meta.xml
<CustomField>
    <fullName>zaapit__sortDir__c</fullName>
    <description>Sort direction ascending / descending</description>
    <inlineHelpText>Sort direction ascending / descending.
Put asc/desc</inlineHelpText>
    <label>sortDir</label>
    <length>20</length>
    <type>Text</type>
</CustomField>