unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__tools_link__c.field-meta.xml
<CustomField>
    <fullName>zaapit__tools_link__c</fullName>
    <label>tools link</label>
    <type>TextArea</type>
</CustomField>