unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__topChartsFields__c.field-meta.xml
<CustomField>
    <fullName>zaapit__topChartsFields__c</fullName>
    <description>Auto open the charts for the fields inside this fields.
Example: field1#field2....</description>
    <label>topChartsFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>