unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__turnOnScrollModeForRLNTabs__c.field-meta.xml
<CustomField>
    <fullName>zaapit__turnOnScrollModeForRLNTabs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn On Scroll Mode For related lists &amp; Sub-Tabs</description>
    <label>turnOnScrollModeForRLNTabs</label>
    <type>Checkbox</type>
</CustomField>