unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__useSmallTableFont__c.field-meta.xml
<CustomField>
    <fullName>zaapit__useSmallTableFont__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When "marked" that entire table will be displayed in small font (8pt).
This feature will help you to display large amount of data</description>
    <inlineHelpText>When "marked" that entire table will be displayed in small font (8pt).</inlineHelpText>
    <label>useSmallTableFont</label>
    <type>Checkbox</type>
</CustomField>