unpackaged/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Using_Scope__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Using_Scope__c</fullName>
    <description>USING SCOPE
Delegated
Everything
Mine
mine_and_my_groups
My_Territory
My_Team_Territory
Team
https://developer.salesforce.com/docs/atlas.en-us.soql_sosl.meta/soql_sosl/sforce_api_calls_soql_select_using_scope.htm</description>
    <label>Using Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>